# dsa

./: .gitignore  config.h  configure.ac  libtool
include/: linked_list.h  stack.h
src/: Makefile.am  linked_list.c  main  main.c  stack.c
tests/: Makefile.am  check_linked_list  check_linked_list.c  check_stack  check_stack.c
